@@ -2,9 +2,9 @@ local hell = require "specl.shell"
 
 local SPECL = "specs/specl"
 
-function run_spec (yaml)
+function run_spec (yaml, ...)
   return hell.spawn {
-    SPECL, "--color=no", "--formatter=report";
+    SPECL, "--color=no", "--formatter=report", ...;
     stdin = yaml,
   }
 end
