@@ -24,7 +24,7 @@ describe specl:
     - it reports unexpected pending passes: |
         yaml = yaml .. "\n    pending ()\n    expect (1).should_be (1)"
         expect (run_spec (yaml)).
-          should_match_output "%?.*PENDING expectation 1: passed unexpectedly"
+          should_match_output "%?.*PENDING expectation 1: .*passed unexpectedly"
     - it uses pending argument for pending passes: |
         yaml = yaml .. " |\n    pending 'issue #23'\n    expect (1).should_be (1)"
         expect (run_spec (yaml)).
